@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-16T16:25:07Z",
-  "count" : 2,
+  "timestamp" : "2023-07-30T08:19:49Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
