@@ -1,3 +1,12 @@
+2023-07-30T08:19:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5705167788 # 652
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-30
+* notice: last 14d: unq all: 4 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 200 438 / 217 466
+* notice: next accum: outdated-unq outdated-all / unq all: 200 438 / 218 467
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-16 2023-07-30]
+
 2023-07-30T01:35:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5703585484 # 651
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-30
